--- a/.github/workflows/update-gacha-data.yml
+++ b/.github/workflows/update-gacha-data.yml
@@ -82,6 +82,9 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add genshin/gacha_data.json hsr/gacha_data.json zzz/gacha_data.json
           git commit -m "Update gacha data $(date +'%Y-%m-%d')"
+          # Pull latest changes and rebase
+          git pull --rebase origin main || true
+          # Force push changes
           git push -f
 
       - name: No changes to commit
